--- a/tasks/templates/tasks/delete_page.html
+++ b/tasks/templates/tasks/delete_page.html
@@ -4,8 +4,11 @@
     <form method="POST">
         {% csrf_token %}
         <h1 style="text-align: center;">Confirms the deletion of "{{item.task}}"</h1>
-        <button class="btn btn-default"><a href="{% url 'tasks' %}">Cancel</a></button>
-        <button class="btn btn-danger" type="submit">Confirm</button>
+        <center>
+            <br><br>
+            <button class="btn btn-default"><a href="{% url 'tasks' %}">Cancel</a></button>
+            <button class="btn btn-danger" type="submit">Confirm</button>
+        </center>
     </form>
 </div>
 {% endblock %}
