--- a/tasks/templates/tasks/tasks_page.html
+++ b/tasks/templates/tasks/tasks_page.html
@@ -6,7 +6,7 @@
     <table class="table table-striped table-bordered">
         <tr>
         <th>ID</th>
-        <th>Task</th>
+        <th>Task Title</th>
         <th>Description</th>
         <th>Status</th>
         <th></th>
